--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "ipware": "^2.0.0",
+    "node-fetch": "^2.3.0",
     "whois-json": "^2.0.4"
   }
 }
